html/src/theme.material3.scss
/* ... */
input[type='text'],
input[type='number'],
.el-textarea__inner {
    color: rgb(var(--md-sys-color-on-surface));
    font-family: var(--md-sys-typescale-body-large-font);
    line-height: var(--md-sys-typescale-body-large-line-height);
    font-size: var(--md-sys-typescale-body-large-size);
    font-weight: var(--md-sys-typescale-body-large-weight);
    letter-spacing: var(--md-sys-typescale-body-large-tracking);
}
.el-input--mini .el-input__inner {
    height: 36px;
}
.el-pagination--small button,
.el-pagination--small span:not([class*='suffix']),
.el-pagination .el-select .el-input .el-input__inner,
.el-input--mini .el-input__icon,
.el-pagination--small .btn-next,
.el-pagination--small .btn-prev,
.el-pagination--small .el-pager li,
.el-pagination--small .el-pager li.btn-quicknext,
.el-pagination--small .el-pager li.btn-quickprev,
.el-pagination--small .el-pager li:last-child {
    height: 32px;
    line-height: 32px;
}
.el-pagination .el-select .el-input .el-input__inner,
.el-input--mini .el-input__icon {
    border-radius: 8px;
}
.el-pagination button.btn-prev,
.el-pagination button.btn-next {
    position: relative;
    background-color: rgb(var(--md-sys-color-secondary-container));
    transition: background-color 0.1s ease-in-out, color 0.1s ease-in-out;
}
.el-pagination button:not(:disabled):hover.btn-prev::after,
.el-pagination button:not(:disabled):hover.btn-next::after {
    background-color: rgba(var(--md-sys-color-on-secondary-container), 0.08);
}
.el-pagination button:not(:disabled):focus.btn-prev::after,
.el-pagination button:not(:disabled):focus.btn-next::after,
.el-pagination button:not(:disabled):active.btn-prev::after,
.el-pagination button:not(:disabled):active.btn-next::after {
    background-color: rgba(var(--md-sys-color-on-secondary-container), 0.12);
}
.el-pagination button:disabled.btn-prev,
.el-pagination button:disabled.btn-next {
    background-color: rgba(var(--md-sys-color-on-surface), 0.12);
    color: rgba(var(--md-sys-color-on-surface), 0.38);
}
.el-pagination button.btn-prev {
    border-top-left-radius: 16px;
    border-bottom-left-radius: 16px;
    padding-left: 12px;
    padding-right: 8px;
}
.el-pagination button.btn-prev::after {
    border-top-left-radius: 16px;
    border-bottom-left-radius: 16px;
}
.el-pagination button.btn-next .el-icon-arrow-right {
    rotate: -90deg;
}
.el-pagination button.btn-next {
    border-top-right-radius: 16px;
    border-bottom-right-radius: 16px;
    padding-left: 8px;
    padding-right: 8px;
}
.el-pagination button.btn-next::after {
    border-top-right-radius: 16px;
    border-bottom-right-radius: 16px;
}
.el-pager li,
.el-pager li.btn-quicknext,
.el-pager li.btn-quickprev {
    position: relative;
    padding: 0 8px;
    font-weight: 500;
    background-color: rgb(var(--md-sys-color-secondary-container));
    color: rgb(var(--md-sys-color-on-surface-variant));
}
.el-pager li::after,
.el-pagination button.btn-prev::after,
.el-pagination button.btn-next::after,
.el-tabs__item::after {
    position: absolute;
    content: '';
    height: 100%;
    width: 100%;
    background-color: transparent;
    border: none;
    left: 0;
    top: 0;
    transition: background-color 0.1s ease-in-out;
}
.el-pager li:hover::after {
    background-color: rgba(var(--md-sys-color-on-secondary-container), 0.08);
}
.el-pager li:focus::after,
.el-pager li:active:after {
    background-color: rgba(var(--md-sys-color-on-secondary-container), 0.12);
}
.el-pager li.active {
    font-weight: 600;
    color: rgb(var(--md-sys-color-primary));
}
.el-pager li:hover,
.el-pagination button:not(:disabled):hover {
    color: rgb(var(--md-sys-color-on-primary-container));
}
.el-form-item.is-error .el-input__inner,
.el-form-item.is-error .el-input__inner:focus,
.el-form-item.is-error .el-textarea__inner,
.el-form-item.is-error .el-textarea__inner:focus,
.el-message-box__input input.invalid,
.el-message-box__input input.invalid:focus {
    border-color: rgb(var(--md-sys-color-error));
}

.el-message-box__errormsg {
    height: 18px;
    opacity: 1;
    color: rgb(var(--md-sys-color-error));
    margin: 2px 12px;
    font-family: var(--md-sys-typescale-body-small-font);
    line-height: var(--md-sys-typescale-body-small-line-height);
    font-size: var(--md-sys-typescale-body-small-size);
    font-weight: var(--md-sys-typescale-body-small-weight);
    letter-spacing: var(--md-sys-typescale-body-small-tracking);
    transition: height 0.1s ease-out, min-height 0.1s ease-out,
        opacity 0.1s ease-out;
}
.el-message-box__errormsg[style='visibility: hidden;'] {
    height: 0;
    min-height: 0;
    opacity: 0;
}
.vrc-instance-queue-message {
    padding: 10px !important;
    background: #f0f9eb !important;
}

.el-message.is-closable .el-message__content {
    padding-right: 16px;
}


/* Typography */

.x-container > .options-container:first-child .header {
    color: rgb(var(--md-sys-color-on-surface));
    font-family: var(--md-sys-typescale-headline-medium-font);
    line-height: var(--md-sys-typescale-headline-medium-line-height);
    font-size: var(--md-sys-typescale-headline-medium-size);
    font-weight: var(--md-sys-typescale-headline-medium-weight);
    letter-spacing: var(--md-sys-typescale-headline-medium-tracking);
}
.options-container .header {
    color: rgb(var(--md-sys-color-on-surface));
    font-family: var(--md-sys-typescale-headline-small-font);
    line-height: var(--md-sys-typescale-headline-small-line-height);
    font-size: var(--md-sys-typescale-headline-small-size);
    font-weight: var(--md-sys-typescale-headline-small-weight);
    letter-spacing: var(--md-sys-typescale-headline-small-tracking);
}
/* ... */

